[Qt] REGRESSION(r57638): tst_qwebframe::objectDeleted() fails https://bugs.webkit.org/show_bug.cgi?id=38316

Reviewed by Tor Arne Vestbø.

Accessing properties of a deleted objects doesn't throw an exception
anymore.

Continue to expose the QObject class wrapper for objects that
previously existed but don't exist anymore. QtClass is safe to
use with a deleted QObject.

* bridge/qt/qt_instance.cpp:
(JSC::Bindings::QtInstance::getClass): Return null only if m_class
doesn't exist yet and there's no m_object.

Canonical link: https://commits.webkit.org/49748@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58493 268f45cc-cd09-0410-ab3c-d52691b4dbfc